# SCE

./: .gitignore  .sceconfig  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.MD  build.bat  build.ps1  build.sh
.github/workflows/: analysis.yml  build.yml  c-test.yml  release.yml
benchmarks/: CMakeLists.txt
include/: arg.h  cc.h  cfiles.h  colors.h  console.h  editorfile.h  git.h  languages.h  library.h  macros.h  pages.h  sceconfig.h  variables.h
src/: arg.c  cc.c  cfiles.c  colors.c  console.c  editorfile.c  git.c  languages.c  library.c  macros.c  main.c  pages.c  sceconfig.c  variables.c
src/modules/: languages.c
tests/: CMakeLists.txt  test_editor.c
wincurses/: CMakeLists.txt
